--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,6 @@ __pycache__/
 *.so
 
 # Distribution / packaging
-.Python
 build/
 develop-eggs/
 dist/
@@ -183,7 +182,6 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
 env/
 venv/
 ENV/
@@ -216,3 +214,5 @@ cython_debug/
 
 # tables
 *.csv
+
+.idea
